// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List renders correctly 1`] = `
.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  list-style-type: none;
  padding: 0;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 10px 6px 12px;
  gap: 8px;
}

.c4 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 100%;
}

.c5 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 6px;
  color: #6F838D;
  font-family: Nunito Sans;
  font-weight: 400;
  width: 1px;
}

.c5 > *:first-child {
  position: absolute;
  height: 14px;
  font-size: 14px;
  left: 12px;
}

.c6 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  font-weight: 400;
  border: none;
  box-shadow: none;
  font-family: primary;
  display: block;
  padding-left: 30px;
  padding-rigth: 12px;
  outline: none;
  width: 100%;
}

.c7 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding-top: 10px;
  padding-bottom: 10px;
  padding-left: 16px;
  padding-right: 16px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-family: primary;
  width: 100%;
}

.c8 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  width: 18px;
  height: 18px;
}

.c9 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: absolute;
  opacity: 0;
  overflow: hidden;
  width: 100%;
  height: 100%;
}

.c13 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-right: 8px;
  border-radius: 2px;
  color: gray;
}

input:checked ~ .c0 {
  color: primary;
}

input:focus ~ .c0 {
  box-shadow: active;
}

.c10 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-right: 8px;
  border-radius: 2px;
  color: gray;
  width: 16px;
  height: 16px;
}

input:checked ~ .c0 {
  color: primary;
}

input:focus ~ .c0 {
  box-shadow: active;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c12 {
  display: none;
}

input:checked:not(:disabled) ~ .c11 {
  display: block;
}

.c15 {
  display: none;
}

input:not(:checked):not(:disabled) ~ .c14 {
  display: block;
}

.c19 {
  display: none;
}

input:checked:disabled ~ .c18 {
  display: block;
}

.c17 {
  display: none;
}

input:disabled:not(:checked) ~ .c16 {
  display: block;
}

@media screen and (min-width:40em) {

}

<ul
  className="c0 c1"
>
  <span
    className="c0 c2 c3"
  >
    <div
      className="c0 c4"
      width="100%"
    >
      <div
        className="c0 c5"
      >
        <span
          className="icon-buscar"
        />
        <input
          className="c0 c6"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          placeholder="Search"
          type="text"
          width="100%"
        />
      </div>
    </div>
  </span>
  <li
    className="c0 c7"
    width={1}
  >
    <div
      className="c0 c8"
    >
      <input
        className="c0 c9"
        type="checkbox"
      />
      <svg
        aria-hidden="true"
        className="c0 c10 c11 c12 c0 c13"
        fill="none"
        height={16}
        viewBox="0 0 16 16"
        width={16}
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          fill="#6A88F2"
          height="15"
          rx="4"
          ry="4"
          stroke="#6A88F2"
          width="15"
          x="0.5"
          y="0.5"
        />
        <path
          d="M 5,8 L 7,10 L 12,5"
          stroke="white"
          strokeLinecap="round"
          strokeWidth="1.5"
        />
      </svg>
      <svg
        aria-hidden="true"
        className="c0 c10 c14 c15 c0 c13"
        fill="none"
        height={16}
        viewBox="0 0 16 16"
        width={16}
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          fill="white"
          height="15"
          rx="4"
          ry="4"
          stroke="#C1CCD0"
          width="15"
          x="0.5"
          y="0.5"
        />
      </svg>
      <svg
        aria-hidden="true"
        className="c0 c10 c16 c17 c0 c13"
        fill="none"
        height={16}
        viewBox="0 0 16 16"
        width={16}
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          fill="#EFF2F3"
          height="15"
          rx="4"
          ry="4"
          stroke="#EFF2F3"
          width="15"
          x="0.5"
          y="0.5"
        />
      </svg>
      <svg
        aria-hidden="true"
        className="c0 c10 c18 c19 c0 c13"
        fill="none"
        height={16}
        viewBox="0 0 16 16"
        width={16}
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          fill="#EFF2F3"
          height="15"
          rx="4"
          ry="4"
          stroke="#EFF2F3"
          width="15"
          x="0.5"
          y="0.5"
        />
        <path
          d="M 5,8 L 7,10 L 12,5"
          stroke="#C1CCD0"
          strokeLinecap="round"
          strokeWidth="1.5"
        />
      </svg>
    </div>
    One
  </li>
  <li
    className="c0 c7"
    width={1}
  >
    <div
      className="c0 c8"
    >
      <input
        className="c0 c9"
        type="checkbox"
      />
      <svg
        aria-hidden="true"
        className="c0 c10 c11 c12 c0 c13"
        fill="none"
        height={16}
        viewBox="0 0 16 16"
        width={16}
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          fill="#6A88F2"
          height="15"
          rx="4"
          ry="4"
          stroke="#6A88F2"
          width="15"
          x="0.5"
          y="0.5"
        />
        <path
          d="M 5,8 L 7,10 L 12,5"
          stroke="white"
          strokeLinecap="round"
          strokeWidth="1.5"
        />
      </svg>
      <svg
        aria-hidden="true"
        className="c0 c10 c14 c15 c0 c13"
        fill="none"
        height={16}
        viewBox="0 0 16 16"
        width={16}
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          fill="white"
          height="15"
          rx="4"
          ry="4"
          stroke="#C1CCD0"
          width="15"
          x="0.5"
          y="0.5"
        />
      </svg>
      <svg
        aria-hidden="true"
        className="c0 c10 c16 c17 c0 c13"
        fill="none"
        height={16}
        viewBox="0 0 16 16"
        width={16}
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          fill="#EFF2F3"
          height="15"
          rx="4"
          ry="4"
          stroke="#EFF2F3"
          width="15"
          x="0.5"
          y="0.5"
        />
      </svg>
      <svg
        aria-hidden="true"
        className="c0 c10 c18 c19 c0 c13"
        fill="none"
        height={16}
        viewBox="0 0 16 16"
        width={16}
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          fill="#EFF2F3"
          height="15"
          rx="4"
          ry="4"
          stroke="#EFF2F3"
          width="15"
          x="0.5"
          y="0.5"
        />
        <path
          d="M 5,8 L 7,10 L 12,5"
          stroke="#C1CCD0"
          strokeLinecap="round"
          strokeWidth="1.5"
        />
      </svg>
    </div>
    Two
  </li>
  <li
    className="c0 c7"
    width={1}
  >
    <div
      className="c0 c8"
    >
      <input
        className="c0 c9"
        type="checkbox"
      />
      <svg
        aria-hidden="true"
        className="c0 c10 c11 c12 c0 c13"
        fill="none"
        height={16}
        viewBox="0 0 16 16"
        width={16}
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          fill="#6A88F2"
          height="15"
          rx="4"
          ry="4"
          stroke="#6A88F2"
          width="15"
          x="0.5"
          y="0.5"
        />
        <path
          d="M 5,8 L 7,10 L 12,5"
          stroke="white"
          strokeLinecap="round"
          strokeWidth="1.5"
        />
      </svg>
      <svg
        aria-hidden="true"
        className="c0 c10 c14 c15 c0 c13"
        fill="none"
        height={16}
        viewBox="0 0 16 16"
        width={16}
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          fill="white"
          height="15"
          rx="4"
          ry="4"
          stroke="#C1CCD0"
          width="15"
          x="0.5"
          y="0.5"
        />
      </svg>
      <svg
        aria-hidden="true"
        className="c0 c10 c16 c17 c0 c13"
        fill="none"
        height={16}
        viewBox="0 0 16 16"
        width={16}
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          fill="#EFF2F3"
          height="15"
          rx="4"
          ry="4"
          stroke="#EFF2F3"
          width="15"
          x="0.5"
          y="0.5"
        />
      </svg>
      <svg
        aria-hidden="true"
        className="c0 c10 c18 c19 c0 c13"
        fill="none"
        height={16}
        viewBox="0 0 16 16"
        width={16}
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          fill="#EFF2F3"
          height="15"
          rx="4"
          ry="4"
          stroke="#EFF2F3"
          width="15"
          x="0.5"
          y="0.5"
        />
        <path
          d="M 5,8 L 7,10 L 12,5"
          stroke="#C1CCD0"
          strokeLinecap="round"
          strokeWidth="1.5"
        />
      </svg>
    </div>
    Three
  </li>
</ul>
`;

exports[`ListDefault renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  list-style-type: none;
  padding: 0;
  width: 33.33333333333333%;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
}

.c3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: inherit;
  font-family: Nunito Sans;
  font-weight: normal;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  color: white;
  background-color: primary;
  border: 0;
  border-radius: 12px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
}

@media screen and (min-width:40em) {

}

<ul
  className="c0"
  width={0.3333333333333333}
>
  <li
    className="c1"
    width={1}
  >
    <div
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <div
        className="c2"
      >
        <button
          className="c3"
        >
          Item 1
        </button>
      </div>
    </div>
  </li>
  <li
    className="c1"
    width={1}
  >
    <div
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <div
        className="c2"
      >
        <button
          className="c3"
        >
          Item 2
        </button>
      </div>
    </div>
  </li>
  <li
    className="c1"
    width={1}
  >
    <div
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <div
        className="c2"
      >
        <button
          className="c3"
        >
          Item 3
        </button>
      </div>
    </div>
  </li>
</ul>
`;

exports[`ListIcon renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  list-style-type: none;
  padding: 0;
  width: 33.33333333333333%;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
}

.c3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: inherit;
  font-family: Nunito Sans;
  font-weight: bold;
  font-size: 24px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  color: white;
  background-color: primary;
  border: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 12px;
  white-space: nowrap;
}

@media screen and (min-width:40em) {

}

<ul
  className="c0"
  width={0.3333333333333333}
>
  <li
    className="c1"
    width={1}
  >
    <div
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <div
        className="c2"
      >
        <button
          className="c3"
        >
          <span
            className="icon-agente"
            style={
              Object {
                "fontSize": "20px",
                "height": "20px",
              }
            }
          />
          <span>
            Item 1
          </span>
        </button>
      </div>
    </div>
  </li>
  <li
    className="c1"
    width={1}
  >
    <div
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <div
        className="c2"
      >
        <button
          className="c3"
        >
          <span
            className="icon-agente"
            style={
              Object {
                "fontSize": "20px",
                "height": "20px",
              }
            }
          />
          <span>
            Item 2
          </span>
        </button>
      </div>
    </div>
  </li>
  <li
    className="c1"
    width={1}
  >
    <div
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <div
        className="c2"
      >
        <button
          className="c3"
        >
          <span
            className="icon-agente"
            style={
              Object {
                "fontSize": "20px",
                "height": "20px",
              }
            }
          />
          <span>
            Item 3
          </span>
        </button>
      </div>
    </div>
  </li>
</ul>
`;

exports[`ListMultiselect renders correctly 1`] = `
.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  list-style-type: none;
  padding: 0;
  width: 33.33333333333333%;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
}

.c4 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: inherit;
  font-family: Nunito Sans;
  font-size: 24px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  color: white;
  background-color: primary;
  border: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
}

.c5 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  width: 18px;
  height: 18px;
}

.c6 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: absolute;
  opacity: 0;
  overflow: hidden;
  width: 100%;
  height: 100%;
}

.c10 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-right: 8px;
  border-radius: 2px;
  color: gray;
}

input:checked ~ .c0 {
  color: primary;
}

input:focus ~ .c0 {
  box-shadow: active;
}

.c7 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-right: 8px;
  border-radius: 2px;
  color: gray;
  width: 16px;
  height: 16px;
}

input:checked ~ .c0 {
  color: primary;
}

input:focus ~ .c0 {
  box-shadow: active;
}

.c9 {
  display: none;
}

input:checked:not(:disabled) ~ .c8 {
  display: block;
}

.c12 {
  display: none;
}

input:not(:checked):not(:disabled) ~ .c11 {
  display: block;
}

.c16 {
  display: none;
}

input:checked:disabled ~ .c15 {
  display: block;
}

.c14 {
  display: none;
}

input:disabled:not(:checked) ~ .c13 {
  display: block;
}

@media screen and (min-width:40em) {

}

<ul
  className="c0 c1"
  width={0.3333333333333333}
>
  <li
    className="c0 c2"
    width={1}
  >
    <div
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <div
        className="c0 c3"
      >
        <button
          className="c0 c4"
          onClick={[Function]}
        >
          <div
            className="c0 c5"
          >
            <input
              className="c0 c6"
              defaultChecked={false}
              disabled={true}
              type="checkbox"
            />
            <svg
              aria-hidden="true"
              className="c0 c7 c8 c9 c0 c10"
              fill="none"
              height={16}
              viewBox="0 0 16 16"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                fill="#6A88F2"
                height="15"
                rx="4"
                ry="4"
                stroke="#6A88F2"
                width="15"
                x="0.5"
                y="0.5"
              />
              <path
                d="M 5,8 L 7,10 L 12,5"
                stroke="white"
                strokeLinecap="round"
                strokeWidth="1.5"
              />
            </svg>
            <svg
              aria-hidden="true"
              className="c0 c7 c11 c12 c0 c10"
              fill="none"
              height={16}
              viewBox="0 0 16 16"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                fill="white"
                height="15"
                rx="4"
                ry="4"
                stroke="#C1CCD0"
                width="15"
                x="0.5"
                y="0.5"
              />
            </svg>
            <svg
              aria-hidden="true"
              className="c0 c7 c13 c14 c0 c10"
              fill="none"
              height={16}
              viewBox="0 0 16 16"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                fill="#EFF2F3"
                height="15"
                rx="4"
                ry="4"
                stroke="#EFF2F3"
                width="15"
                x="0.5"
                y="0.5"
              />
            </svg>
            <svg
              aria-hidden="true"
              className="c0 c7 c15 c16 c0 c10"
              fill="none"
              height={16}
              viewBox="0 0 16 16"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                fill="#EFF2F3"
                height="15"
                rx="4"
                ry="4"
                stroke="#EFF2F3"
                width="15"
                x="0.5"
                y="0.5"
              />
              <path
                d="M 5,8 L 7,10 L 12,5"
                stroke="#C1CCD0"
                strokeLinecap="round"
                strokeWidth="1.5"
              />
            </svg>
          </div>
          <span
            style={
              Object {
                "color": "#94A2AB",
                "fontWeight": undefined,
              }
            }
          >
            Item 1
          </span>
        </button>
      </div>
    </div>
  </li>
  <li
    className="c0 c2"
    width={1}
  >
    <div
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <div
        className="c0 c3"
      >
        <button
          className="c0 c4"
          onClick={[Function]}
        >
          <div
            className="c0 c5"
          >
            <input
              className="c0 c6"
              defaultChecked={false}
              disabled={false}
              type="checkbox"
            />
            <svg
              aria-hidden="true"
              className="c0 c7 c8 c9 c0 c10"
              fill="none"
              height={16}
              viewBox="0 0 16 16"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                fill="#6A88F2"
                height="15"
                rx="4"
                ry="4"
                stroke="#6A88F2"
                width="15"
                x="0.5"
                y="0.5"
              />
              <path
                d="M 5,8 L 7,10 L 12,5"
                stroke="white"
                strokeLinecap="round"
                strokeWidth="1.5"
              />
            </svg>
            <svg
              aria-hidden="true"
              className="c0 c7 c11 c12 c0 c10"
              fill="none"
              height={16}
              viewBox="0 0 16 16"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                fill="white"
                height="15"
                rx="4"
                ry="4"
                stroke="#C1CCD0"
                width="15"
                x="0.5"
                y="0.5"
              />
            </svg>
            <svg
              aria-hidden="true"
              className="c0 c7 c13 c14 c0 c10"
              fill="none"
              height={16}
              viewBox="0 0 16 16"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                fill="#EFF2F3"
                height="15"
                rx="4"
                ry="4"
                stroke="#EFF2F3"
                width="15"
                x="0.5"
                y="0.5"
              />
            </svg>
            <svg
              aria-hidden="true"
              className="c0 c7 c15 c16 c0 c10"
              fill="none"
              height={16}
              viewBox="0 0 16 16"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                fill="#EFF2F3"
                height="15"
                rx="4"
                ry="4"
                stroke="#EFF2F3"
                width="15"
                x="0.5"
                y="0.5"
              />
              <path
                d="M 5,8 L 7,10 L 12,5"
                stroke="#C1CCD0"
                strokeLinecap="round"
                strokeWidth="1.5"
              />
            </svg>
          </div>
          <span
            style={
              Object {
                "color": "#49565D",
                "fontWeight": undefined,
              }
            }
          >
            Item 2
          </span>
        </button>
      </div>
    </div>
  </li>
  <li
    className="c0 c2"
    width={1}
  >
    <div
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <div
        className="c0 c3"
      >
        <button
          className="c0 c4"
          onClick={[Function]}
        >
          <div
            className="c0 c5"
          >
            <input
              className="c0 c6"
              defaultChecked={false}
              disabled={false}
              type="checkbox"
            />
            <svg
              aria-hidden="true"
              className="c0 c7 c8 c9 c0 c10"
              fill="none"
              height={16}
              viewBox="0 0 16 16"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                fill="#6A88F2"
                height="15"
                rx="4"
                ry="4"
                stroke="#6A88F2"
                width="15"
                x="0.5"
                y="0.5"
              />
              <path
                d="M 5,8 L 7,10 L 12,5"
                stroke="white"
                strokeLinecap="round"
                strokeWidth="1.5"
              />
            </svg>
            <svg
              aria-hidden="true"
              className="c0 c7 c11 c12 c0 c10"
              fill="none"
              height={16}
              viewBox="0 0 16 16"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                fill="white"
                height="15"
                rx="4"
                ry="4"
                stroke="#C1CCD0"
                width="15"
                x="0.5"
                y="0.5"
              />
            </svg>
            <svg
              aria-hidden="true"
              className="c0 c7 c13 c14 c0 c10"
              fill="none"
              height={16}
              viewBox="0 0 16 16"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                fill="#EFF2F3"
                height="15"
                rx="4"
                ry="4"
                stroke="#EFF2F3"
                width="15"
                x="0.5"
                y="0.5"
              />
            </svg>
            <svg
              aria-hidden="true"
              className="c0 c7 c15 c16 c0 c10"
              fill="none"
              height={16}
              viewBox="0 0 16 16"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                fill="#EFF2F3"
                height="15"
                rx="4"
                ry="4"
                stroke="#EFF2F3"
                width="15"
                x="0.5"
                y="0.5"
              />
              <path
                d="M 5,8 L 7,10 L 12,5"
                stroke="#C1CCD0"
                strokeLinecap="round"
                strokeWidth="1.5"
              />
            </svg>
          </div>
          <span
            style={
              Object {
                "color": "#49565D",
                "fontWeight": undefined,
              }
            }
          >
            Item 3
          </span>
        </button>
      </div>
    </div>
  </li>
</ul>
`;
